add username character limitations

--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -18,6 +18,7 @@
 </form>
 <br>
 <p style="margin-top: 8px;">
+    Your username can only contain alphanumeric characters, dashes, and underscores.
     Your password must be at least 8 characters long. Although they are stored with industry-grade
     encryption and nobody can see them even if they gain access to the users database, we strongly
     recommend you not to use a password you use elsewhere.<br><br>
