--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -74,12 +74,11 @@
         <script src="/assets/js/jquery.min.js"></script>
         <script src="/assets/js/showdown.min.js"></script>
         <script src="/assets/js/purify.min.js"></script>
-        <script src="/assets/js/jquery.twbsPagination.min.js"></script>
         <script src="/assets/js/convertmd.js"></script>
         {% block script %}{% endblock %}
-        <script src="/assets/js/dateconvert.js"></script>
+        <script src="/assets/js/new-pagination.js"></script>
         <script src="/assets/js/seemore.js"></script>
-        <script src="/assets/js/pagination.js"></script>
+        <script src="/assets/js/dateconvert.js"></script>
         <script src="/assets/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
