--- a/src/templates/problem/problems.html
+++ b/src/templates/problem/problems.html
@@ -45,7 +45,11 @@
                 <td><a href="/problem/{{ row["id"] }}">{{ row["name"] }}</a></td>
                 <td>{{ row["category"] }}</td>
                 <td>{{ row["point_value"] }}</td>
-                <td>{{ row["sols"] }}</td>
+                {% if session.admin %}
+                    <td><a href="/admin/submissions?problem_id={{ row["id"] }}">{{ row["sols"] }}&correct=AC</a></td>
+                {% else %}
+                    <td>{{ row["sols"] }}</td>
+                {% endif %}
             </tr>
             {% endfor %}
         </tbody>
