--- a/src/templates/contest/contest.html
+++ b/src/templates/contest/contest.html
@@ -26,7 +26,7 @@
     <table class="table table-hover table-full-width">
         <thead class="table-dark">
             <tr>
-                <th scope="col" style="width: 10;">Status</th>
+                <th scope="col" style="width: 10%;">Status</th>
                 <th scope="col" style="width: 60%;">Name</th>
                 <th scope="col" style="width: 10%;">Category</th>
                 <th scope="col" style="width: 10%;">Value</th>
@@ -47,7 +47,7 @@
                 <td>{{ row["category"] }}</td>
                 <td>{{ row["point_value"] }}</td>
                 {% if session.admin %}
-                    <td><a href="/admin/submissions?problem_id={{ row["id"] }}&contest_id={{ row["contest_id"] }}&correct=AC">{{ row["sols"] }}</a></td>
+                    <td><a href="/admin/submissions?problem_id={{ row["id"] }}&contest_id={{ request.path[9:] }}&correct=AC">{{ row["sols"] }}</a></td>
                 {% else %}
                     <td>{{ row["sols"] }}</td>
                 {% endif %}
