--- a/src/templates/problem/problems.html
+++ b/src/templates/problem/problems.html
@@ -25,7 +25,7 @@
     <table class="table table-hover table-full-width">
         <thead class="table-dark">
             <tr>
-                <th scope="col" style="width: 10;">Status</th>
+                <th scope="col" style="width: 10%;">Status</th>
                 <th scope="col" style="width: 60%;">Name</th>
                 <th scope="col" style="width: 10%;">Category</th>
                 <th scope="col" style="width: 10%;">Value</th>
