--- a/src/templates/problem/problems.html
+++ b/src/templates/problem/problems.html
@@ -46,7 +46,7 @@
                 <td>{{ row["category"] }}</td>
                 <td>{{ row["point_value"] }}</td>
                 {% if session.admin %}
-                    <td><a href="/admin/submissions?problem_id={{ row["id"] }}">{{ row["sols"] }}&correct=AC</a></td>
+                    <td><a href="/admin/submissions?problem_id={{ row["id"] }}&correct=AC">{{ row["sols"] }}</a></td>
                 {% else %}
                     <td>{{ row["sols"] }}</td>
                 {% endif %}
