--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="theme-color" content="#0d6efd">
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" crossorigin="anonymous">
         <link href="/assets/css/github-markdown.min.css" rel="stylesheet" media="async" onload="this.media='all'">
