--- a/src/templates/contest/contest.html
+++ b/src/templates/contest/contest.html
@@ -45,7 +45,7 @@
                 </td>
                 <td><a href="{{ request.path }}/problem/{{ row["problem_id"] }}">{{ row["name"] }}</a></td>
                 <td>{{ row["category"] }}</td>
-                <td>{{ row["point_value"] }}</td>
+                <td>{{ row["point_value"] }}{{ "D" if row["dynamic"] }}</td>
                 {% if session.admin %}
                     <td><a href="/admin/submissions?problem_id={{ row["problem_id"] }}&contest_id={{ request.path[9:] }}&correct=AC">{{ row["sols"] }}</a></td>
                 {% else %}
