--- a/src/templates/admin/console.html
+++ b/src/templates/admin/console.html
@@ -21,7 +21,13 @@
 <br>
 <a class="btn btn-primary" href="/problems/draft" role="button">Draft Problems</a>
 <hr>
-<p>The only thing maintenance mode should be used for is to make significant changes to the database that requires nobody writes to it during that time, as well as 5 minutes before a reboot to let users know that the site will be down momentarily. If the application is rebooted, maintenance mode will turn itself off.</p>
+<p>
+    The only thing maintenance mode should be used for is to make significant changes to the
+    database that requires nobody writes to it during that time, as well as 5 minutes before a
+    reboot to let users know that the site will be down momentarily. If the application is rebooted,
+    maintenance mode will remain on. To disable it, log in as an admin account and navigate back to
+    this page or remove the 'maintenance_mode' file on the server.
+</p>
 <form action="/admin/maintenance" method="POST">
     {% if maintenance_mode %}
         <input type="submit" class="btn btn-primary" value="Disable Maintenance Mode">
