--- a/src/templates/admin/submissions.html
+++ b/src/templates/admin/submissions.html
@@ -62,7 +62,7 @@
             <input class="form-control mb-3" type="text" id="username" name="username" placeholder="Filter by username">
             <input class="form-control mb-3" type="text" id="problem_id" name="problem_id" placeholder="Filter by problem ID">
             <input class="form-control mb-3" type="text" id="contest_id" name="contest_id" placeholder="Filter by contest ID">
-            <select class="form-control mb-3" id="correct" name="correct">
+            <select class="form-control form-select mb-3" id="correct" name="correct">
                 <option value="" selected hidden>Filter by status</option>
                 <option value="">All</option>
                 <option value="AC">AC</option>
