--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -33,7 +33,7 @@
                         </ul>
                         <ul class="navbar-nav">
                             <div class="form-check form-switch nav-link">
-                                <input class="form-check-input dark-toggle" onclick="toggleDark()" type="checkbox" style="margin-left: 0!important">
+                                <input class="form-check-input dark-toggle" onclick="toggleDark()" type="checkbox">
                             </div>
                             <li class="nav-link white">Welcome, {{ session.username }}</li>
                             <li><a class="nav-link" href="/settings">Settings</a></li>
