increment copyright year

--- a/src/templates/error/maintenance.html
+++ b/src/templates/error/maintenance.html
@@ -36,7 +36,7 @@
         </main>
         <footer>
             <hr>
-            <p class="text-center">© 2020, {{ CLUB_NAME }}. Source code available <a href="https://github.com/jdabtieu/CTFOJ">here</a>.</p>
+            <p class="text-center">© 2020-2021, {{ CLUB_NAME }}. Source code available <a href="https://github.com/jdabtieu/CTFOJ">here</a>.</p>
         </footer>
         <script src="/assets/js/darkMode.js"></script>
         <script src="/assets/js/bootstrap.bundle.min.js"></script>
