--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -67,9 +67,9 @@
         </main>
         <footer>
             <hr>
-            <p class="text-center">© 2020, {{ CLUB_NAME }}. <a href="https://github.com/jdabtieu/CTFOJ">Source Code</a> - <a href="/terms">Terms of Service</a> - <a href="/privacy">Privacy Policy</a></p>
+            <p class="text-center">© 2020-2021, {{ CLUB_NAME }}. <a href="https://github.com/jdabtieu/CTFOJ">Source Code</a> - <a href="/terms">Terms of Service</a> - <a href="/privacy">Privacy Policy</a></p>
         </footer>
-        
+
         <script src="/assets/js/darkMode.js"></script>
         <script src="/assets/js/showdown.min.js"></script>
         <script src="/assets/js/purify.min.js"></script>
