--- a/src/templates/forgotpassword.html
+++ b/src/templates/forgotpassword.html
@@ -14,5 +14,8 @@
     {% endif %}
 </form>
 <br>
-<p>If there is an account associated with the email you provided, a link to reset your password has been sent to that link. Be sure to check your spam folder!</p>
+<p>
+    If there is an account associated with the email you provided, a link to reset your password 
+    has been sent to that link. Be sure to check your spam folder!
+</p>
 {% endblock %}
