--- a/src/templates/admin/contestnotify.html
+++ b/src/templates/admin/contestnotify.html
@@ -7,7 +7,11 @@
 <p>This will send an email to all participants in your contest. Use this feature with caution.</p>
 <form autocomplete="off" method="post" id="create" name="create">
     <input class="form-control mb-3" type="text" name="subject" placeholder="Subject" required>
-    <textarea class="form-control mb-3" name="message" rows="20" placeholder="Message" required></textarea>
+    <textarea class="form-control mb-3"
+              name="message"
+              rows="20"
+              placeholder="Message"
+              required></textarea>
     <input class="btn btn-primary" type="submit" name="submit" value="Notify">
     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
 </form>
