--- a/src/templates/admin/createannouncement.html
+++ b/src/templates/admin/createannouncement.html
@@ -23,8 +23,9 @@
 <script>
     document.getElementById('description').oninput = function() {
         var product = converter.makeHtml(this.value);
-        document.getElementById("description-out").innerHTML = product;
-        document.getElementById("description").style.height = document.getElementById("description-out").offsetHeight + "px";
+        var outputDiv = document.getElementById("description-out");
+        outputDiv.innerHTML = product;
+        document.getElementById("description").style.height = outputDiv.offsetHeight + "px";
     }
 </script>
 {% endblock %}
