--- a/src/templates/admin/createcontest.html
+++ b/src/templates/admin/createcontest.html
@@ -5,14 +5,29 @@
 {% block main %}
 <h1>Create Contest</h1>
 <form autocomplete="off" method="post" id="create" name="create">
-    <input class="form-control mb-3" type="text" id="contest_id" name="contest_id" placeholder="Contest ID" required>
-    <input class="form-control mb-3" type="text" id="contest_name" name="contest_name" placeholder="Contest Name" required>
+    <input class="form-control mb-3" name="contest_id" placeholder="Contest ID" required>
+    <input class="form-control mb-3" name="contest_name" placeholder="Contest Name" required>
     <div style="position: relative;">
-        <textarea class="form-control mb-3 md-preview" id="description" name="description" rows="20" placeholder="Description" required></textarea>
+        <textarea class="form-control mb-3 md-preview"
+                  id="description"
+                  name="description"
+                  rows="20"
+                  placeholder="Description"
+                  required></textarea>
         <div id="description-out" class="md-preview"></div>
     </div>
-    <input class="form-control mb-3 dtl" type="text" id="start" name="start" placeholder="Start Date & Time" required>
-    <input class="form-control mb-3 dtl" type="text" id="end" name="end" placeholder="End Date & Time" required>
+    <input class="form-control mb-3 dtl"
+           type="text"
+           id="start"
+           name="start"
+           placeholder="Start Date & Time"
+           required>
+    <input class="form-control mb-3 dtl"
+           type="text"
+           id="end"
+           name="end"
+           placeholder="End Date & Time"
+           required>
     <div class="form-control mb-3" style="border: 0;">
         <input type="checkbox" id="scoreboard_visible" name="scoreboard_visible">
         <label for="scoreboard_visible">Scoreboard Visible?</label>
@@ -31,20 +46,21 @@
 
     document.getElementById('description').oninput = function() {
         var product = converter.makeHtml(this.value);
-        document.getElementById("description-out").innerHTML = product;
-        document.getElementById("description").style.height = document.getElementById("description-out").offsetHeight + "px";
+        var outputDiv = document.getElementById("description-out");
+        outputDiv.innerHTML = product;
+        document.getElementById("description").style.height = outputDiv.offsetHeight + "px";
     }
 
-    document.getElementsByTagName("form")[0].onsubmit = function(event) {
-        var formStart = this.querySelector("#start");
+    document.getElementById('create').addEventListener('submit', function(event) {
+        var formStart = document.getElementById("start");
         var start = new Date(formStart.value).toISOString();
         formStart.setAttribute("type", "text");
         formStart.value = start;
 
-        var formEnd = this.querySelector("#end");
+        var formEnd = document.getElementById("end");
         var end = new Date(formEnd.value).toISOString();
         formEnd.setAttribute("type", "text");
         formEnd.value = end;
-    }
+    });
 </script>
 {% endblock %}
