--- a/src/templates/admin/submissions.html
+++ b/src/templates/admin/submissions.html
@@ -39,9 +39,18 @@
         <div class="card">
             <h3>Filter Submissions</h3>
             <form>
-                <input class="form-control mb-3" type="text" id="username" name="username" placeholder="Filter by username">
-                <input class="form-control mb-3" type="text" id="problem_id" name="problem_id" placeholder="Filter by problem ID">
-                <input class="form-control mb-3" type="text" id="contest_id" name="contest_id" placeholder="Filter by contest ID">
+                <input class="form-control mb-3"
+                       id="username"
+                       name="username"
+                       placeholder="Filter by username">
+                <input class="form-control mb-3"
+                       id="problem_id"
+                       name="problem_id"
+                       placeholder="Filter by problem ID">
+                <input class="form-control mb-3"
+                       id="contest_id"
+                       name="contest_id"
+                       placeholder="Filter by contest ID">
                 <select class="form-control form-select mb-3" id="correct" name="correct">
                     <option value="" selected hidden>Filter by status</option>
                     <option value="">All</option>
@@ -57,9 +66,18 @@
     <div class="card">
         <h3>Filter Submissions</h3>
         <form>
-            <input class="form-control mb-3" type="text" id="username" name="username" placeholder="Filter by username">
-            <input class="form-control mb-3" type="text" id="problem_id" name="problem_id" placeholder="Filter by problem ID">
-            <input class="form-control mb-3" type="text" id="contest_id" name="contest_id" placeholder="Filter by contest ID">
+            <input class="form-control mb-3"
+                   id="username"
+                   name="username"
+                   placeholder="Filter by username">
+            <input class="form-control mb-3"
+                   id="problem_id"
+                   name="problem_id"
+                   placeholder="Filter by problem ID">
+            <input class="form-control mb-3"
+                   id="contest_id"
+                   name="contest_id"
+                   placeholder="Filter by contest ID">
             <select class="form-control form-select mb-3" id="correct" name="correct">
                 <option value="" selected hidden>Filter by status</option>
                 <option value="">All</option>
@@ -74,10 +92,18 @@
 {% block script %}
 <script>
     var queryStrings = new URL(window.location.href).searchParams;
-    if (queryStrings.get("username") != null) document.querySelector("form #username").setAttribute("value", queryStrings.get("username"));
-    if (queryStrings.get("problem_id") != null) document.querySelector("form #problem_id").setAttribute("value", queryStrings.get("problem_id"));
-    if (queryStrings.get("contest_id") != null) document.querySelector("form #contest_id").setAttribute("value", queryStrings.get("contest_id"));
-
+    if (queryStrings.get("username") != null) {
+        document.querySelector("#username").setAttribute("value", queryStrings.get("username"));
+    }
+    if (queryStrings.get("problem_id") != null) {
+        document.querySelector("#problem_id").setAttribute("value", queryStrings.get("problem_id"));
+    }
+    if (queryStrings.get("contest_id") != null) {
+        document.querySelector("#contest_id").setAttribute("value", queryStrings.get("contest_id"));
+    }
+    if (queryStrings.get("correct") != null) {
+        document.querySelector("#correct").value = queryStrings.get("correct");
+    }
     var total_length = {{ length }};
 </script>
 {% endblock %}
