--- a/src/templates/changepassword.html
+++ b/src/templates/changepassword.html
@@ -5,15 +5,24 @@
 {% block main %}
 <h1>Change Password</h1>
 <form method="post">
-   <div class="mb-3">
-        <input class="form-control" name="password" placeholder="Current Password" type="password" autocomplete="current-password" required>
-    </div>
-    <div class="mb-3">
-        <input class="form-control" name="newPassword" placeholder="New Password" type="password" autocomplete="new-password" required>
-    </div>
-    <div class="mb-3">
-        <input class="form-control" name="confirmation" placeholder="Confirmation" type="password" autocomplete="new-password" required>
-    </div>
+    <input class="mb-3 form-control"
+           name="password"
+           placeholder="Current Password"
+           type="password"
+           autocomplete="current-password"
+           required>
+    <input class="mb-3 form-control"
+           name="newPassword"
+           placeholder="New Password"
+           type="password"
+           autocomplete="new-password"
+           required>
+    <input class="mb-3 form-control"
+           name="confirmation"
+           placeholder="Confirmation"
+           type="password"
+           autocomplete="new-password"
+           required>
     <button class="btn btn-primary" type="submit">Change Password</button>
     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
 </form>
