--- a/src/templates/error/maintenance.html
+++ b/src/templates/error/maintenance.html
@@ -3,10 +3,12 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="theme-color" content="#0d6efd">
 
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" crossorigin="anonymous">
+        <link rel="stylesheet"
+              href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+              crossorigin="anonymous">
         <link href="/assets/css/style.css" rel="stylesheet">
-
         <link href="/static/favicon.png" rel="icon">
 
         <title>Maintenance | {{ CLUB_NAME }}</title>
@@ -16,13 +18,17 @@
         <nav class="navbar navbar-expand-md navbar-dark bg-primary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/">{{ CLUB_NAME }}</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbar" aria-controls="navbarText"
+                        aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbar">
                     <ul class="navbar-nav ms-auto">
                         <div class="form-check form-switch nav-link">
-                            <input class="form-check-input dark-toggle" onclick="toggleDark()" type="checkbox">
+                            <input class="form-check-input dark-toggle"
+                                   onclick="toggleDark()"
+                                   type="checkbox">
                         </div>
                         <li><a class="nav-link" href="/login">Log In</a></li>
                     </ul>
@@ -32,11 +38,17 @@
 
         <main class="container">
             <h1>Under Maintenance</h1>
-            We are currently undergoing scheduled maintenance. We will be back soon. Thank you for your patience.
+            <p>
+                We are currently undergoing scheduled maintenance. We will be back soon.
+                Thank you for your patience.
+            </p>
         </main>
         <footer>
             <hr>
-            <p class="text-center">© 2020-2021, {{ CLUB_NAME }}. Source code available <a href="https://github.com/jdabtieu/CTFOJ">here</a>.</p>
+            <p class="text-center">
+                &copy; 2020-2021, {{ CLUB_NAME }}. Source code available
+                <a href="https://github.com/jdabtieu/CTFOJ">here</a>.
+            </p>
         </footer>
         <script src="/assets/js/darkMode.js"></script>
         <script src="/assets/js/bootstrap.bundle.min.js"></script>
