--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -5,8 +5,16 @@
 {% block main %}
 <h1 class="text-center">Log In</h1>
 <form method="post">
-    <input autocomplete="off" autofocus class="form-control mb-3" name="username" placeholder="Username" type="text" required>
-    <input class="form-control mb-3" name="password" placeholder="Password" type="password" required>
+    <input autofocus
+           class="form-control mb-3"
+           name="username"
+           placeholder="Username"
+           required>
+    <input class="form-control mb-3"
+           name="password"
+           placeholder="Password"
+           type="password"
+           required>
     <button class="btn btn-primary" type="submit">Log In</button>
     <a href="/forgotpassword" class="btn btn-secondary white">Forgot Password</a>
     {% if USE_CAPTCHA %}
