--- a/src/templates/terms.html
+++ b/src/templates/terms.html
@@ -5,5 +5,12 @@
 <h1>Terms of Service</h1>
 <strong>This document describes the terms you agree to be bound by when you use this website.</strong>
 <br>
-<p>These Terms of Service are governed by the laws of Canada, as well as the laws of Ontario, Canada. The information and events on this website are provided on an as-is basis, and we are not responsible for any damages that may result from. We require you to provide accurate account information when registering. You may not attack the server infrastructure or the website code, except when clearly given permission to by us. We reserve the right to ban your account at any time for abuse, misuse, or any other reason.</p>
+<p>
+    These Terms of Service are governed by the laws of Canada, as well as the laws of Ontario, 
+    Canada. The information and events on this website are provided on an as-is basis, and we are
+    not responsible for any damages that may result from. We require you to provide accurate
+    account information when registering. You may not attack the server infrastructure or the
+    website code, except when clearly given permission to by us. We reserve the right to ban your
+    account at any time for abuse, misuse, or any other reason.
+</p>
 {% endblock %}
